Fix an issue where user can't scroll by replacing overflow with min-height

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
 
 body{
   margin: 0;
-  overflow: hidden;
+  min-height: 100vh;
 }
 
 .left-side{
